@@ -261,7 +261,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 216
         TOPMARGIN, 7
-        BOTTOMMARGIN, 185
+        BOTTOMMARGIN, 199
         HORZGUIDE, 19
         HORZGUIDE, 31
         HORZGUIDE, 40
@@ -1001,7 +1001,7 @@ BEGIN
     LTEXT           "minutes idle",IDC_STATIC,157,73,44,8
 END
 
-IDD_PS_SYSTEM DIALOGEX 0, 0, 223, 190
+IDD_PS_SYSTEM DIALOGEX 0, 0, 223, 204
 STYLE DS_SETFONT | WS_CHILD | WS_DISABLED | WS_CAPTION | WS_SYSMENU
 CAPTION "System"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
@@ -1020,13 +1020,14 @@ BEGIN
     LTEXT           "databases.",IDC_STATIC_MAXMRUITEMS,90,83,88,10
     CONTROL         "Recent Databases on File Menu rather than as a sub-menu.",IDC_MRU_ONFILEMENU,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,10,98,202,10
-    GROUPBOX        "Configuration Information",IDC_REGDEL_GRP,7,132,209,52
+    GROUPBOX        "Configuration Information",IDC_REGDEL_GRP,7,148,209,52
     CONTROL         "Remove PasswordSafe data from Registry",IDC_REGDEL_CB,
-                    "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,10,143,199,18
-    PUSHBUTTON      "Apply",IDC_REGDEL_BTN,20,164,50,14,WS_DISABLED
+                    "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,10,159,199,18
+    PUSHBUTTON      "Apply",IDC_REGDEL_BTN,20,180,50,14,WS_DISABLED
     CONTROL         "Start PasswordSafe at Login",IDC_STARTUP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,10,40,199,10
     CONTROL         "Open database read-only by default",IDC_DEFAULTOPENRO,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,10,120,203,10
+    CONTROL         "Allow multiple instaces",IDC_MULTIPLEINSTANCES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,10,134,161,10
 END
 
 IDD_PS_DISPLAY DIALOGEX 0, 0, 223, 229
